# rustrivia

./: .gitignore  .todos.json  Cargo.toml  README.md  build.rs
src/: jeopardy.slint  main.rs
